# augr

./: Cargo.toml
src/: error_strategy.rs  lib.rs
src/augmenters/: mod.rs
src/augmenters/keyboard/: keyboard_augmenter.rs  mod.rs
src/augmenters/ocr/: mod.rs  ocr_augmenter.rs
src/langs/: en_ressources.rs  fr_ressources.rs  mod.rs
