[package]
name = "augrs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
derive_builder = "0.20.0"
itertools = "0.13.0"
rand = "0.8.5"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
unicode-segmentation = "1.11.0"

[features]
default = ["fr", "en"]
en = []
fr = []
