[package]
name = "augrs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
derive_builder = "0.20.0"
itertools = "0.13.0"
rand = "0.8.5"
rayon = {version ="1.10.0", optional = true}
unicode-segmentation = "1.11.0"

[features]
default = ["fr", "en", "parallel"]
en = []
fr = []
parallel = ["dep:rayon"]
